fix: category-list overflow-y setting

--- a/TripO/src/styles/ingredient.css
+++ b/TripO/src/styles/ingredient.css
@@ -276,6 +276,7 @@ input {
   display: flex;
   white-space: nowrap; /* ✅ 텍스트 줄바꿈 방지 */
   overflow-x: auto; /* ✅ 가로 스크롤 허용 */
+  overflow-y: hidden;
   display: flex;
   gap: 25px; /* ✅ 카드 간격 */
   scrollbar-width: none; /* ✅ 기본 스크롤바 제거 (Firefox) */
